--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ embed {
   <body>
     <br>
     <center><h1>Welcome to KnightHawk Programming BootCamp 2021!</h1>
-    	<embed src="BootCamp.mp4" type="video/mp4" >
+    	<embed src="BootCamp_Final.mp4" type="video/mp4" >
     </center>
 
 <center>
@@ -75,7 +75,7 @@ function many() {
 	var selected = document.getElementById("hm").value;
 
 	if (selected === "1") {
-		document.getElementById("form-content").innerHTML = '<div class="row"><div class="col"><input type="text" class="form-control" placeholder="Parent First name" aria-label="Parent First name"></div><div class="col"><input type="text" class="form-control" placeholder="Parent Last name" aria-label="Last name"></div></div><div class="row"><br><div class="col" style="padding-top: 10px"><input type="text" class="form-control" placeholder="Student First name" aria-label="Student First name"></div><div class="col"><input type="text" class="form-control" placeholder="Student Last name" aria-label="Student Last name"></div></div>';
+		document.getElementById("form-content").innerHTML = '<div class="row"><div class="col"><input type="text" class="form-control" placeholder="Parent First name" aria-label="Parent First name"></div><div class="col"><input type="text" class="form-control" placeholder="Parent Last name" aria-label="Last name"></div></div><div class="row"><br><div class="col"><input type="text" class="form-control" placeholder="Student First name" aria-label="Student First name"></div><div class="col"><input type="text" class="form-control" placeholder="Student Last name" aria-label="Student Last name"></div></div>';
 	}
 
 }
