--- a/index.html
+++ b/index.html
@@ -46,43 +46,8 @@ embed {
 
 <center>
 <br><br>
-<dev class="card text-white bg-dark mb-3 " style="width: 50vw;">
-<h1>Sign Up</h1>
-<br>
 
-<form>
-	<div id="form-content">
-<br>
-<select class="form-select" id="hm">
-  <option selected>How many Students?</option>
-  <option value="1">One</option>
-  <option value="2">Two</option>
-  <option value="3">Three</option>
-</select>
-<br>
-<a class="btn btn-primary" onclick="many()">Submit</a>
-<br><br>
-</div>
-</form>
-
-
-</center>
-</div>
-<br><br><br><br><br>
-<script type="text/javascript">
-	
-function many() {
-	var selected = document.getElementById("hm").value;
-
-	if (selected === "1") {
-		document.getElementById("form-content").innerHTML = '<div class="row"><div class="col"><input type="text" class="form-control" placeholder="Parent First name" aria-label="Parent First name"></div><div class="col"><input type="text" class="form-control" placeholder="Parent Last name" aria-label="Last name"></div></div><div class="row"><br><div class="col"><input type="text" class="form-control" placeholder="Student First name" aria-label="Student First name"></div><div class="col"><input type="text" class="form-control" placeholder="Student Last name" aria-label="Student Last name"></div></div>';
-	}
-
-}
-	
-
-
-</script>
+<script type="text/javascript" src="https://form.jotform.com/jsform/211167280172146"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
   </body>
