--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ embed {
   <body>
     <br>
     <center><h1>Welcome to KnightHawk Programming BootCamp 2021!</h1>
-    	<embed src="BootCamp_Final.mp4" type="video/mp4" >
+    	<embed src="BootCamp_Jun.mp4" type="video/mp4" >
     </center>
 
 <center>
