--- a/index.html
+++ b/index.html
@@ -40,8 +40,26 @@ embed {
 
   </head>
   <body>
+
+<nav class="navbar navbar-dark bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/">
+      <img src="knighthawk.ico" alt="" width="30" height="24" class="d-inline-block align-text-top">
+      BootCamp
+ <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/about">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/signup">Sign Up</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
     <br>
-    <center><h1>Welcome to KnightHawk Programming BootCamp 2021!</h1>
+    <center><h1>Welcome to KnightHawk Programming BootCamp #2</h1>
     	<embed src="BootCamp_Jun.mp4" type="video/mp4" >
     </center>
 
