--- a/signup.html
+++ b/signup.html
@@ -12,6 +12,22 @@
   </head>
 
   <body>
-    
-    
+<nav class="navbar navbar-dark bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/">
+      <img src="knighthawk.ico" alt="" width="30" height="24" class="d-inline-block align-text-top">
+      BootCamp
+ <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/about">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/signup">Sign Up</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
   </body>
