--- a/signup.html
+++ b/signup.html
@@ -29,5 +29,6 @@
     </div>
   </div>
 </nav>
-
+<br>
+<script type="text/javascript" src="https://form.jotform.com/jsform/211167280172146"></script>
   </body>
