--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@ embed {
 <nav class="navbar navbar-dark bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="/">
-      <img src="knighthawk.ico" alt="" width="30" height="24" class="d-inline-block align-text-top">
+      <img src="knighthawk.ico" alt="" width="30" height="30" class="d-inline-block align-text-top">
       BootCamp
+    </a>
+    </div>
  <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
