--- a/index.html
+++ b/index.html
@@ -34,8 +34,20 @@ embed {
 
   <body>
     <br>
-    <center><h1>Welcome to KnightHawk Programming BootCamp 2021!</h1>
-    	<embed src="BootCamp_Final.mp4" type="video/mp4" >
+    <center><h1>Welcome to KnightHawk Programming BootCamp #2!</h1>
+    	<embed src="BootCamp_Jun.mp4" type="video/mp4" >
+    		<a class="btn btn-primary" href="#signup">Signup</a>
+    
+    <div>
+    	<br>
+    	<h3>About Me</h3>
+    	<br>
+    	<p>
+    		My name is Andrew Webberley and I will be teaching the KnightHawk Programming BootCamp.  I have 8 years programming expirence.  I work great with kids and I am very patient.  I have already taught this camp once and I have worked out all of the kinks in my curriculum.  The first time I taught that camp it was a smashing success!
+    	</p>
+    </div>
+
+
     </center>
 
 <center>
@@ -43,11 +55,6 @@ embed {
 
 <script type="text/javascript" src="https://form.jotform.com/jsform/211167280172146"></script>
 
-
-<br>
-<center><h1>Welcome to KnightHawk Programming BootCamp #2</h1>
-<embed src="BootCamp_Jun.mp4" type="video/mp4">
-</center>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
   </body>
 </html>
