--- a/index.html
+++ b/index.html
@@ -13,12 +13,20 @@
 
 <style type="text/css">
 	
-	body {
+
+
+	#video {
 		background-color: grey;
 	}
 
-
-
+	#about {
+		padding-left: 25%;
+		padding-right: 25%;
+		font-size: 40;
+	}
+	p {
+		font-size: 40;
+	}
 
 embed {
 	width: 1280px;
@@ -34,17 +42,23 @@ embed {
 
   <body>
     <br>
+    <div id="video">
     <center><h1>Welcome to KnightHawk Programming BootCamp #2!</h1>
     	<embed src="BootCamp_Jun.mp4" type="video/mp4" >
-    		<a class="btn btn-primary" href="#signup">Signup</a>
-    
-    <div>
+    		<div style="padding-bottom: 30px;"></div>
+    		<br>
+    		<a style="padding-bottom: 10px;" class="btn btn-primary btn-lg" href="#signup">Signup</a>
+    		<div style="padding-bottom: 100px;"></div>
+    		<br style="padding-bottom: 100px;">
+    </div>
+    <div id="about">
+    	<center>
     	<br>
-    	<h3>About Me</h3>
+    	<h2>About Me</h2>
     	<br>
-    	<p>
+    	<h4>
     		My name is Andrew Webberley and I will be teaching the KnightHawk Programming BootCamp.  I have 8 years programming expirence.  I work great with kids and I am very patient.  I have already taught this camp once and I have worked out all of the kinks in my curriculum.  The first time I taught that camp it was a smashing success!
-    	</p>
+    	</h4>
     </div>
 
 
