--- a/index.html
+++ b/index.html
@@ -22,8 +22,14 @@
 	#about {
 		padding-left: 25%;
 		padding-right: 25%;
-		font-size: 40;
+		padding-bottom: 50px;
 	}
+
+	#review {
+		padding-left: 25%;
+		padding-right: 25%;
+	}
+
 	p {
 		font-size: 40;
 	}
@@ -47,7 +53,7 @@ embed {
     	<embed src="BootCamp_Jun.mp4" type="video/mp4" >
     		<div style="padding-bottom: 30px;"></div>
     		<br>
-    		<a style="padding-bottom: 10px;" class="btn btn-primary btn-lg" href="#signup">Signup</a>
+    		<a style="padding: 15px 25px 15px 25px;" class="btn btn-primary btn-lg" href="#signup"><h4><strong>Signup</strong></h4></a>
     		<div style="padding-bottom: 100px;"></div>
     		<br style="padding-bottom: 100px;">
     </div>
@@ -57,18 +63,52 @@ embed {
     	<h2>About Me</h2>
     	<br>
     	<h4>
-    		My name is Andrew Webberley and I will be teaching the KnightHawk Programming BootCamp.  I have 8 years programming expirence.  I work great with kids and I am very patient.  I have already taught this camp once and I have worked out all of the kinks in my curriculum.  The first time I taught that camp it was a smashing success!
+    		My name is Andrew Webberley and I will be teaching the KnightHawk Programming BootCamp.  I have 8 years programming expirence.  I work great with kids and I am very patient.  I have already taught this camp once and I have worked out all of the kinks in my curriculum.  The first time I taught this camp it was tons of fun for both the students and myself!
     	</h4>
     </div>
 
+<div id="review">
+	<div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active" data-bs-interval="100000">
+      <p  class="d-block w-80" >
+      	I personally would recommend investing your time into this class because it was entertaining and a good
+challenge. The startup for everything was easy and simple, and the rest of the code was interesting and
+cool. Any technical difficulty, very few, that occurred was easily fixed with the help of Andrew. Every day
+that we had a class, we always accomplished something, whether it was complicated or easy! I would
+highly recommend Andrew’s Knighthawk Bootcamp class! ~ Jordan, Student 6/9/2021
+      </p>
+    </div>
+    <div class="carousel-item" data-bs-interval="100000">
+      <p class="d-block w-80">
+      Andrew’s Knighthawk bootcamp was very carefully thought out, with clear objectives for each. It was my
+observation that Andrew intentionally planned for the student to accomplish meaningful and age
+appropriate projects each day. In addition, Andrew’s instruction was clear and the 2 hour class, per day,
+was a perfect amount of time to successfully train the students and complete the projects. The My son,
+who had no previous experience, learned a great deal about programming and was excited to show
+other’s what he had learned. The instruction, projects and length of each class was perfect and a great
+value! I would definitely recommend Andrew’s Knighthawk Bootcamp for anyone interested in learning
+about programming! He did a fantastic job! ~ Jennifer Testa, Parent 6/9/2021 </p>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+</div>
 
     </center>
 
 <center>
 <br><br>
-
-<script type="text/javascript" src="https://form.jotform.com/jsform/211167280172146"></script>
-
+<div id="signup">
+<script id="signup" type="text/javascript" src="https://form.jotform.com/jsform/211167280172146"></script>
+</div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
   </body>
 </html>
