--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@ embed {
     </div>
 
 <div id="review">
-	<div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+	<div id="carouselExampleSlide" class="carousel carousel-dark slide" data-bs-ride="carousel">
   <div class="carousel-inner">
-    <div class="carousel-item active" data-bs-interval="100000">
+    <div class="carousel-item active" data-bs-interval="50000">
       <p  class="d-block w-80" >
       	I personally would recommend investing your time into this class because it was entertaining and a good
 challenge. The startup for everything was easy and simple, and the rest of the code was interesting and
@@ -79,7 +79,7 @@ that we had a class, we always accomplished something, whether it was complicate
 highly recommend Andrew’s Knighthawk Bootcamp class! ~ Jordan, Student 6/9/2021
       </p>
     </div>
-    <div class="carousel-item" data-bs-interval="100000">
+    <div class="carousel-item" data-bs-interval="50000">
       <p class="d-block w-80">
       Andrew’s Knighthawk bootcamp was very carefully thought out, with clear objectives for each. It was my
 observation that Andrew intentionally planned for the student to accomplish meaningful and age
