--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ embed {
 </style>
 
 
-  </head>
+</head>
 
 <body>
 
@@ -63,12 +63,14 @@ embed {
     	<h2>About Me</h2>
     	<br>
     	<h4>
-    		My name is Andrew Webberley and I will be teaching the KnightHawk Programming BootCamp.  I have 8 years programming expirence.  I work great with kids and I am very patient.  I have already taught this camp once and I have worked out all of the kinks in my curriculum.  The first time I taught this camp it was tons of fun for both the students and myself!
+    		My name is Andrew Webberley and I will be teaching the KnightHawk Programming BootCamp.  I have 8 years of programming experience and am passionate about Computer Science.  The first time I taught this camp it was tons of fun for both the students and myself!  I want to encourage my students to enjoy programming, persevere in problem-solving, and always continue learning.
     	</h4>
     </div>
 
 <div id="review">
-	<div id="carouselExampleSlide" class="carousel carousel-dark slide" data-bs-ride="carousel">
+	<center>
+	<h2>Reviews</h2><br>
+	<div id="carouselExampleControls" class="carousel carousel-dark slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active" data-bs-interval="50000">
       <p  class="d-block w-80" >
