--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 	#review {
 		padding-left: 25%;
 		padding-right: 25%;
+    padding-bottom: 50px;
 	}
 
 	p {
@@ -105,6 +106,14 @@ about programming! He did a fantastic job! ~ Jennifer Testa, Parent 6/9/2021 </p
 </div>
 
     </center>
+
+<div id="contact">
+  <center>
+    <h2>Contact</h2>
+    <h6>Feel free to contact me with any questions that you have.</h6>
+    <h4>Email: <a href="mailto:agwebberley@gmail.com">agwebberley@gmail.com</a><br></h4><h3>Text: <a href="tel:+16614627117">661-462-7117</a></h3>
+  </center>
+</div>
 
 <center>
 <br><br>
