--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ embed {
   <body>
     <br>
     <div id="video">
-    <center><h1>Welcome to KnightHawk Programming BootCamp #2!</h1>
+    <center><h1>This class has been canceled</h1>
     	<embed src="BootCamp_Jun.mp4" type="video/mp4" >
     		<div style="padding-bottom: 30px;"></div>
     		<br>
@@ -118,7 +118,7 @@ about programming! He did a fantastic job! ~ Jennifer Testa, Parent 6/9/2021 </p
 <center>
 <br><br>
 <div id="signup">
-<script id="signup" type="text/javascript" src="https://form.jotform.com/jsform/211167280172146"></script>
+<!--<script id="signup" type="text/javascript" src="https://form.jotform.com/jsform/211167280172146"></script> -->
 </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
   </body>
